#BLEM-19 Schedule finder prototype (#50)
* Rename Status to AcquaintanceStatus

* Add TimetableStatus

* Add timetable Migration, Model etc.

* Performance improvement, Reduce DB querry

* UI changes

* Add Timetable Popover for changing states

* Timetable editable status prototype done

* Major refactoring

* Minor Bugfixes, Class renamings

* Selectable Acquaintances in Timetable

* Bugfixes
