# routes/api_v1.php
@@ -4,8 +4,11 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\v1\AuthController;
-use App\Http\Controllers\Api\v1\UserController;
 use App\Http\Controllers\Api\v1\UtillityController;
+use App\Http\Controllers\Api\v1\UserController;
+use App\Http\Controllers\Api\v1\UserTimetableController;
+use App\Http\Controllers\Api\v1\TimetableController;
+use App\Http\Controllers\Api\v1\AcquaintanceController;
 
 /*
 |--------------------------------------------------------------------------
@@ -28,5 +31,20 @@ Route::middleware(['auth:sanctum', 'verified'])->group(function ()
     //     return $request->user();
     // });
 
-    // Route::apiResource('user', UserController::class);
+    Route::apiResource('user', UserController::class)
+        ->except(['destroy']);
+
+    Route::apiResource('user.timetable', UserTimetableController::class)
+        ->except(['store', 'update', 'destroy']);
+    Route::get('/user/{user}/timetable/between/{dateFrom}/{dateTo}', [UserTimetableController::class, 'betweenDates'])->name('user.timetable.between');
+
+    Route::apiResource('timetable', TimetableController::class)
+        ->except(['destroy']);
+    Route::get('/timetable/between/{dateFrom}/{dateTo}', [TimetableController::class, 'betweenDates'])->name('timetable.between');
+
+    Route::apiResource('acquaintance', AcquaintanceController::class)
+        ->except(['destroy']);
+    Route::put('/acquaintance/byReceiver/{acquaintance}', [AcquaintanceController::class, 'updateByReceiver'])->name('user.timetable.updateByReceiver');
+    Route::put('/acquaintance/byTransmitter/{acquaintance}', [AcquaintanceController::class, 'updateByTransmitter'])->name('user.timetable.updateByTransmitter');
+    Route::put('/acquaintance/byReceiverOrTransmitter/{acquaintance}', [AcquaintanceController::class, 'updateByReceiverOrTransmitter'])->name('user.timetable.updateByReceiverOrTransmitter');
 });
